py.install_sources(
    [
        'DbapiProvidesIndex.py',
        'backtracking.py',
        'circular_dependency.py',
        'output.py',
        'output_helpers.py',
        'package_tracker.py',
        'slot_collision.py',
        '__init__.py',
    ],
    subdir : '_emerge/resolver',
    pure : true
)
