py.install_sources(
    [
        'anydbm.py',
        'cache_errors.py',
        'ebuild_xattr.py',
        'flat_hash.py',
        'fs_template.py',
        'mappings.py',
        'metadata.py',
        'sqlite.py',
        'sql_template.py',
        'template.py',
        'volatile.py',
        '__init__.py',
    ],
    subdir : 'portage/cache',
    pure : not native_extensions
)

subdir('index')
