py.install_sources(
    [
        'DummyTree.py',
        'IndexedPortdb.py',
        'IndexedVardb.py',
        'bintree.py',
        'cpv_expand.py',
        'dep_expand.py',
        'porttree.py',
        'vartree.py',
        'virtual.py',
        '_ContentsCaseSensitivityManager.py',
        '_MergeProcess.py',
        '_SyncfsProcess.py',
        '_VdbMetadataDelta.py',
        '_expand_new_virt.py',
        '_similar_name_search.py',
        '__init__.py',
    ],
    subdir : 'portage/dbapi',
    pure : not native_extensions
)
