py.install_sources(
    [
        'filtering.py',
        'messages.py',
        'mod_custom.py',
        'mod_echo.py',
        'mod_mail.py',
        'mod_mail_summary.py',
        'mod_save.py',
        'mod_save_summary.py',
        'mod_syslog.py',
        '__init__.py',
    ],
    subdir : 'portage/elog',
    pure : not native_extensions
)
