py.install_sources(
    [
        'config_checks.py',
        'controller.py',
        'getaddrinfo_validate.py',
        'old_tree_timestamp.py',
        'revision_history.py',
        'syncbase.py',
        '__init__.py',
    ],
    subdir : 'portage/sync',
    pure : not native_extensions
)

subdir('modules')
