py.install_sources(
    [
        'conftest.py',
        '__init__.py',
    ],
    subdir : 'portage/tests',
    pure : not native_extensions
)

subdir('bin')
subdir('dbapi')
subdir('dep')
subdir('ebuild')
subdir('emerge')
subdir('env')
subdir('glsa')
subdir('gpkg')
subdir('lafilefixer')
subdir('lazyimport')
subdir('lint')
subdir('locks')
subdir('news')
subdir('process')
subdir('resolver')
subdir('sets')
subdir('sync')
subdir('unicode')
subdir('update')
subdir('util')
subdir('versions')
subdir('xpak')
