py.install_sources(
    [
        'config.py',
        'deprecated_profile_check.py',
        'digestcheck.py',
        'digestgen.py',
        'doebuild.py',
        'fetch.py',
        'getmaskingreason.py',
        'getmaskingstatus.py',
        'prepare_build_dirs.py',
        'profile_iuse.py',
        '_metadata_invalid.py',
        '_spawn_nofetch.py',
        '__init__.py',
    ],
    subdir : 'portage/package/ebuild',
    pure : not native_extensions
)

subdir('_config')
subdir('_ipc')
subdir('_parallel_manifest')
