py.install_sources(
    [
        'test_array_fromfile_eof.py',
        'test_config.py',
        'test_doebuild_fd_pipes.py',
        'test_doebuild_spawn.py',
        'test_fetch.py',
        'test_ipc_daemon.py',
        'test_shell_quote.py',
        'test_spawn.py',
        'test_use_expand_incremental.py',
        '__init__.py',
        '__test__.py',
    ],
    subdir : 'portage/tests/ebuild',
    pure : not native_extensions
)
