py.install_sources(
    [
        'test_gpkg_checksum.py',
        'test_gpkg_gpg.py',
        'test_gpkg_metadata_update.py',
        'test_gpkg_metadata_url.py',
        'test_gpkg_path.py',
        'test_gpkg_size.py',
        'test_gpkg_stream.py',
        '__init__.py',
        '__test__.py',
    ],
    subdir : 'portage/tests/gpkg',
    pure : not native_extensions
)
