py.install_sources(
    [
        'test_AsyncFunction.py',
        'test_ForkProcess.py',
        'test_PipeLogger.py',
        'test_PopenProcessBlockingIO.py',
        'test_PopenProcess.py',
        'test_pickle.py',
        'test_poll.py',
        'test_spawn_fail_e2big.py',
        'test_spawn_returnproc.py',
        'test_spawn_warn_large_env.py',
        'test_unshare_net.py',
        '__init__.py',
        '__test__.py',
    ],
    subdir : 'portage/tests/process',
    pure : not native_extensions
)
