py.install_sources(
    [
        'ResolverPlayground.py',
        'test_alternatives_gzip.py',
        'test_aggressive_backtrack_downgrade.py',
        'test_autounmask.py',
        'test_autounmask_binpkg_use.py',
        'test_autounmask_keep_keywords.py',
        'test_autounmask_multilib_use.py',
        'test_autounmask_parent.py',
        'test_autounmask_use_backtrack.py',
        'test_autounmask_use_breakage.py',
        'test_autounmask_use_slot_conflict.py',
        'test_backtracking.py',
        'test_bdeps.py',
        'test_binary_pkg_ebuild_visibility.py',
        'test_blocker.py',
        'test_broken_deps.py',
        'test_changed_deps.py',
        'test_circular_choices.py',
        'test_circular_choices_rust.py',
        'test_circular_dependencies.py',
        'test_complete_graph.py',
        'test_complete_if_new_subslot_without_revbump.py',
        'test_cross_dep_priority.py',
        'test_depclean.py',
        'test_depclean_order.py',
        'test_depclean_slot_unavailable.py',
        'test_depth.py',
        'test_disjunctive_depend_order.py',
        'test_eapi.py',
        'test_features_test_use.py',
        'test_imagemagick_graphicsmagick.py',
        'test_installkernel.py',
        'test_keywords.py',
        'test_merge_order.py',
        'test_missing_iuse_and_evaluated_atoms.py',
        'test_multirepo.py',
        'test_multislot.py',
        'test_old_dep_chain_display.py',
        'test_onlydeps.py',
        'test_onlydeps_circular.py',
        'test_onlydeps_ideps.py',
        'test_onlydeps_minimal.py',
        'test_or_choices.py',
        'test_or_downgrade_installed.py',
        'test_or_upgrade_installed.py',
        'test_output.py',
        'test_package_tracker.py',
        'test_perl_rebuild_bug.py',
        'test_profile_default_eapi.py',
        'test_profile_package_set.py',
        'test_rebuild.py',
        'test_rebuild_ghostscript.py',
        'test_regular_slot_change_without_revbump.py',
        'test_required_use.py',
        'test_runtime_cycle_merge_order.py',
        'test_simple.py',
        'test_slot_abi.py',
        'test_slot_abi_downgrade.py',
        'test_slot_change_without_revbump.py',
        'test_slot_collisions.py',
        'test_slot_conflict_blocked_prune.py',
        'test_slot_conflict_force_rebuild.py',
        'test_slot_conflict_mask_update.py',
        'test_slot_conflict_rebuild.py',
        'test_slot_conflict_unsatisfied_deep_deps.py',
        'test_slot_conflict_update.py',
        'test_slot_conflict_update_virt.py',
        'test_slot_operator_autounmask.py',
        'test_slot_operator_bdeps.py',
        'test_slot_operator_complete_graph.py',
        'test_slot_operator_exclusive_slots.py',
        'test_slot_operator_missed_update.py',
        'test_slot_operator_rebuild.py',
        'test_slot_operator_required_use.py',
        'test_slot_operator_reverse_deps.py',
        'test_slot_operator_runtime_pkg_mask.py',
        'test_slot_operator_unsatisfied.py',
        'test_slot_operator_unsolved.py',
        'test_slot_operator_update_probe_parent_downgrade.py',
        'test_solve_non_slot_operator_slot_conflicts.py',
        'test_targetroot.py',
        'test_tar_merge_order.py',
        'test_unmerge_order.py',
        'test_unnecessary_slot_upgrade.py',
        'test_update.py',
        'test_useflags.py',
        'test_use_dep_defaults.py',
        'test_virtual_minimize_children.py',
        'test_virtual_slot.py',
        'test_with_test_deps.py',
        '__init__.py',
        '__test__.py',
    ],
    subdir : 'portage/tests/resolver',
    pure : not native_extensions
)

subdir('binpkg_multi_instance')
subdir('soname')
