py.install_sources(
    [
        'test_atomic_ofstream.py',
        'test_checksum.py',
        'test_digraph.py',
        'test_file_copier.py',
        'test_getconfig.py',
        'test_grabdict.py',
        'test_install_mask.py',
        'test_manifest.py',
        'test_mtimedb.py',
        'test_normalizedPath.py',
        'test_shelve.py',
        'test_socks5.py',
        'test_stackDictList.py',
        'test_stackDicts.py',
        'test_stackLists.py',
        'test_uniqueArray.py',
        'test_varExpand.py',
        'test_whirlpool.py',
        'test_xattr.py',
        '__init__.py',
        '__test__.py',
    ],
    subdir : 'portage/tests/util',
    pure : not native_extensions
)

subdir('dyn_libs')
subdir('eventloop')
subdir('file_copy')
subdir('futures')
