py.install_sources(
    [
        'AsyncFunction.py',
        'AsyncScheduler.py',
        'AsyncTaskFuture.py',
        'BuildLogger.py',
        'FileCopier.py',
        'FileDigester.py',
        'ForkProcess.py',
        'PipeLogger.py',
        'PipeReaderBlockingIO.py',
        'PopenProcess.py',
        'SchedulerInterface.py',
        'TaskScheduler.py',
        'run_main_scheduler.py',
        '__init__.py',
    ],
    subdir : 'portage/util/_async',
    pure : not native_extensions
)
